<resources>
    <string name="app_name">User List</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone number</string>

    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="incorrect_phone_number">Incorrect phone number</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
</resources>